--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-/ssh/id_ed25519
-/ssh/id_rsa
-/ssh/github_rsa*
+#/ssh/id_ed25519
+#/ssh/id_rsa
+#/ssh/github_rsa*
+#/ssh/*id_*
+#/ssh/*_rsa*
+#/ssh/*_dsa*
+/ssh/*
+!/ssh/*.pub
+!/ssh/config
+
 /ssh/known_hosts
 bundle/cache
 secrets
 rbenv/*/
 .idea/
+/.bindown/
+/bin/
+/gitstatus
